Made some very minor changes. This file probably won't be needed

--- a/background.html
+++ b/background.html
@@ -5,7 +5,9 @@
     <title>test</title>
 </head>
 <body>
-    <a class="centertext lighttext" id="back30">&#8635;;</a>
-    <a class="centertext lighttext" id="forward30">&#8634;</a>
+<div id="controlbuttons">
+    <a class="ocborderedbutton" id="back30">&#8635;;</a>
+    <a class="ocborderedbutton" id="forward30">&#8634;</a>
+</div>
 </body>
 </html>
